Добавила фигурные скобки к if`ам. Создала переменную типа String для использования в switch, в case`ах сократила получаемое значение и разместила финальный сбор строки в return.